[package]
name = "roadrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
futures-timer = "3.0.2"
phf = { version = "0.11.1", features = ["macros"] }
tokio = { version= "1.26.0", features = ["full"] }
warp = "0.3.3"
serde_json = "1.0.94"
serde = { version = "1.0.158", features = ["derive"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
