[package]
name = "roadrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono =  { version = "0.4.24", features = ["serde"] }
futures-timer = "3.0.2"
phf = { version = "0.11.1", features = ["macros"] }
tokio = { version= "1.26.0", features = ["full"] }
warp = { version = "0.3.3", features = ["tls"] }
serde_json = "1.0.94"
serde = { version = "1.0.158", features = ["derive", "std"] }
futures = "0.3.27"
tokio-stream = "0.1.12"
dotenv = "0.15.0"
wait-timeout = "0.2.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
